2005-06-30 Gareth Jones <gareth_jones@users.berlios.de>

	* reroot/libreroot/libc.c, reroot/libreroot/libc.h: dlsymed more persona
	  functions.
	* reroot/libreroot/persona.c: Added more persona functions.

2005-06-29 Gareth Jones <gareth_jones@users.berlios.de>

	* reroot/libreroot/libreroot.c, reroot/libreroot/libreroot.h: Renamed to
	  libc.*.
	* reroot/libreroot/libc.c, reroot/libreroot/libc.h: Added.
	* reroot/libreroot/reroot.h: Removed inclusion of libreroot.h.
	* reroot/libreroot/open.c, reroot/libreroot/persona.c: Changed
	  references to reroot.h to libc.h.

	* reroot/libreroot/memory.c (reroot_stack_string): Minor optimization.

2005-06-27 Gareth Jones <gareth_jones@users.berlios.de>

	* reroot/libreroot/reroot.c: Flagged constructor & destructor for gcc.
	* reroot/libreroot/reroot.h: Removed declarations of constructor &
	  destructor.
	* reroot/libreroot/persona.c: Flagged constructor for gcc.
	* reroot/libreroot/persona.h: Removed.
	* reroot/libreroot/libreroot.c: Removed calls to other initializers.

	* reroot/libreroot/memory.c (reroot_stack_string): Used mempcpy instead
	  of strcat (should be faster).

2005-06-22 Gareth Jones <gareth_jones@users.berlios.de>

	* reroot/libreroot/memory.c: Used memcpy instead of strcpy.
	* reroot/libreroot/reroot.c: Used memcpy & mempcpy instead of strcat &
	  strcpy.

	* reroot/README: Some more planning.

	* reroot/libreroot/libreroot.c, reroot/libreroot/libreroot.h: Added
	  symbol loading support code & loaded `fopen'.
	* reroot/libreroot/open.c: Added dummy override for `fopen'.

	* reroot/libreroot/libreroot.c, reroot/libreroot/libreroot.h,
	  reroot/libreroot/persona.c, reroot/libreroot/persona.h: Added
	  preliminary optional support for faking root privileges.

2005-06-21 Gareth Jones <gareth_jones@users.berlios.de>

	* reroot/libreroot/Makefile, reroot/rerootd/Makefile: Trivial
	  simplification.

	* reroot/libreroot/memory.c (reroot_alloc): Used `error' instead of
	  `fputs' & `exit'.
