@@ -16,10 +16,10 @@
 // this program; if not, write to the Free Software Foundation, Inc., 59 Temple
 // Place, Suite 330, Boston, MA  02111-1307  USA
 
-#include <errno.h>	// errno.
-#include <error.h>	// error.
-#include <stdlib.h>	// free & malloc.
-#include <string.h>	// memcpy, mempcpy & strlen.
+#include <errno.h>
+#include <error.h>
+#include <stdlib.h>
+#include <string.h>
 
 #include "memory.h"
 
